Fix contrast issue of yellow house box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,7 +264,7 @@ Created using information from W3S*/
 }
 
 .yellow {
-    background-color: #EFBC2F;
+    background-color: #CC7700;
 }
 
 .blue {
